[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "requestrepo"
version = "0.0.9"
authors = [{ name = "Dragos Albastroiu", email = "adragos@protonmail.com" }]
description = "Python bindings to automate requestrepo.com"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adrgs/requestrepo-lib"
Issues = "https://github.com/adrgs/requestrepo-lib/issues"
